--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   modal_progress_hud: ^0.1.3
   animated_text_kit: ^1.3.1
+  http: ^0.12.0+2
+
 
 
 dev_dependencies:
